# flavor-text-generator

./: .env.example  .gitignore  README.md  build.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
docker/: devcontainer.Dockerfile
flavor_text_generator/: manage.py
flavor_text_generator/flavor_text_generator/: asgi.py  settings.py  urls.py  wsgi.py
flavor_text_generator/flavor_text_generator/config/: envitoments.py
flavor_text_generator/generator/: exceptions.py  llm_service.py  serializers.py  urls.py  views.py
