[project]
name = "workspace"
version = "0.1.0"
description = "Web API generates flavor text for RPG"
readme = "README.md"
requires-python = ">=3.13"

[tool.pyright]
reportMissingModuleSource = "none"

dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "google-genai>=1.11.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.15.3",
    "google-api-python-client-stubs>=1.29.0",
]
