[project]
name = "workspace"
version = "0.1.0"
description = "Web API generates flavor text for RPG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.2",
]

[tool.pyright]
reportMissingModuleSource = "none"

dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "google-genai>=1.11.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-types>=0.20.0",
    "djangorestframework-stubs>=3.15.3",
    "djangorestframework-types>=0.9.0",
    "drf-typed>=0.3.0",
    "google-api-python-client-stubs>=1.29.0",
]
